--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,119 +1,101 @@
+/* start reset*/
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*end reset*/
+
+
+/*Common*/
+
 
 
 body {
-	background-color: white;
-	font-family: arial;
+    background-color: black;
 }
-
-ul {
-	list-style-type: none;
-	margin-top: 0px;
-}
-
-h1 {
-	background-color: white;
-	font-family: georgia;
-}
-
-
-.portrait {
-    float: left;
-    margin-right: 15px;
-}
-
-
-a:link {
-	color: darkorchid;
-
-}
-
-a:visited {
- 	color: plum;
-}
-
-a:hover { 
-	text-decoration: none;
-}
-
-
-
-img {
-	border: none;
-}
-
-
-
-
-#navbar {
-	height: auto;
-	color: black;
-	background-color: white;
-	background-repeat: no-repeat;
-	float: left;
-	position: relative;
-	padding-left: 10px;
-	padding-right: 40px;
-	margin-right: 10px;
-	text-align: right;
-	font-size: 120%;
-}
-
-
-#navbar a:link {
-	color: gray;
-	text-decoration: none;
-	font-weight: bold;
-}
-
-#navbar a:visited {
-	color: gray;
-	text-decoration: none;
-	font-weight: bold;
-}
-
 
 #head {
-	background-color: white;
-	color: purple;
-	clear: left;
-	height: 64px;
-	margin-top: 50px;
-	margin-left: 270px;
-	margin-right: 150px;
-	margin-bottom: 50px;
-	width: 600px;
-	font-weight: strong;
-	font-size: 150%;
+    background-color: white;
+}
+
+#navbar {
+    background-color: white;
 }
 
 #content {
-	background-color: white;
-	background-position: right bottom;
-	background-repeat: no-repeat;
-	height: auto;
-	width: 600px;
-	margin-left: 270px;
-	margin-right: 30px;
-	padding-bottom: 60px;
+    background-color: white;
 }
 
-#foot {	
-	background-color: white;
-	clear: left;
-	color: grey;
-	height: 32px;
-	margin-left: 270px;
-	margin-right: 30px;
-	width: 600px;
-	text-align: right;
+#foot {
+    background-color: white;
+}
+
+#container {
+    margin: 15px 15px 15px 15px;
 }
 
 
-
-.portfolioProject{
-	margin-top: 70px;
+/*Responsive and dimension-specific*/
+@media (max-width: 320px) {
+    body {
+        background-color: red;
+    }
+}
+ 
+@media (min-width: 321px) and (max-width: 768px) {
+    body {
+        background-color: yellow;
+    }
 }
 
-
-
-
+@media (min-width: 769px)  {
+    body {
+        background-color: green;
+    }
+}
