--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -103,7 +103,7 @@ img {
 	font-size: 1.4em;
 }
 
-#content {
+#main {
 	background-color: white;
 	background-position: right bottom;
 	background-repeat: no-repeat;
