--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,16 +1,11 @@
 body {
-	background-color: white;
-	font-family: arial;
-}
-
-ul {
-	list-style-type: none;
-	margin-top: 0px;
+    background-color: white;
+    font-family: arial;
 }
 
 h1 {
-	background-color: white;
-	font-family: georgia;
+    background-color: white;
+    font-family: georgia;
 }
 
 .portrait {
@@ -27,61 +22,65 @@ h1 {
 }
 
 a:link {
-	color: darkorchid;
+    color: darkorchid;
 
 }
 
 a:visited {
- 	color: plum;
+    color: plum;
 }
 
 a:hover { 
-	text-decoration: none;
+    text-decoration: none;
 }
 
 img {
-	border: none;
+    border: none;
 }
 
 #navbar {
-	height: auto;
-	color: black;
-	background-color: white;
-	background-repeat: no-repeat;
-	float: left;
-	position: relative;
-	padding-left: 10px;
-	padding-right: 40px;
-	margin-right: 10px;
-	text-align: right;
-	font-size: 120%;
+    height: auto;
+    color: black;
+    background-color: white;
+    background-repeat: no-repeat;
+    float: left;
+    position: relative;
+    padding-left: 10px;
+    padding-right: 40px;
+    text-align: right;
+    font-size: 120%;
+}
+
+#navbar ul {
+    list-style-type: none;
+    margin-top: 0px;
 }
 
 #navbar a:link {
-	color: gray;
-	text-decoration: none;
-	font-weight: bold;
+    color: gray;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 #navbar a:visited {
-	color: gray;
-	text-decoration: none;
-	font-weight: bold;
+    color: gray;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 #anav {
-
+    margin-top: 50px;
 }
 
 #anav a:link {
-    font-size: 120%;
+    font-size: 100%;
     color: gray;
     text-decoration: none;
     font-weight: bold;
 }
 
 #anav a:visited {
-    font-size: 120%;
+    font-size: 100%;
     color: gray;
     text-decoration: none;
     font-weight: bold;
@@ -90,43 +89,43 @@ img {
 
 
 #head {
-	background-color: white;
-	color: purple;
-	clear: left;
-	height: 64px;
-	margin-top: 50px;
-	margin-left: 220px;
-	margin-right: 150px;
-	margin-bottom: 50px;
-	width: 600px;
-	font-weight: strong;
-	font-size: 1.4em;
+    background-color: white;
+    color: purple;
+    clear: left;
+    height: 64px;
+    margin-top: 50px;
+    margin-left: 220px;
+    margin-right: 150px;
+    margin-bottom: 50px;
+    width: 600px;
+    font-weight: strong;
+    font-size: 1.4em;
 }
 
 #main {
-	background-color: white;
-	background-position: right bottom;
-	background-repeat: no-repeat;
-	height: auto;
-	width: 600px;
-	margin-left: 220px;
-	margin-right: 30px;
-	padding-bottom: 60px;
+    background-color: white;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    height: auto;
+    width: 600px;
+    margin-left: 220px;
+    margin-right: 30px;
+    padding-bottom: 60px;
 }
 
 #foot {	
-	background-color: white;
-	clear: left;
-	color: grey;
-	height: 32px;
-	margin-left: 220px;
-	margin-right: 30px;
-	width: 600px;
-	text-align: right;
+    background-color: white;
+    clear: left;
+    color: grey;
+    height: 32px;
+    margin-left: 220px;
+    margin-right: 30px;
+    width: 600px;
+    text-align: right;
 }
 
 .portfolioProject{
-	margin-top: 70px;
+    margin-top: 70px;
 }
 
 
