--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,15 +1,10 @@
 body {
     background-color: white;
-    font-family: arial;
+    font-family: sans-serif;
 }
 
 h1 {
     font-family: georgia;
-}
-
-.portrait {
-    float: left;
-    margin-right: 15px;
 }
 
 .left {
@@ -35,6 +30,7 @@ a:visited {
 
 a:hover {
     text-decoration: none;
+    opacity: 0.4;
 }
 
 #navbar {
@@ -47,7 +43,7 @@ a:hover {
     padding-left: 10px;
     padding-right: 40px;
     text-align: right;
-    font-size: 120%;
+    font-size: 130%;
 }
 
 #navbar ul {
@@ -60,7 +56,6 @@ a:hover {
     text-decoration: none;
     font-weight: bold;
 }
-
 
 #anav {
     margin-top: 50px;
@@ -118,4 +113,14 @@ a:hover {
 #content ul li {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+
+
+/* Mobile version overrides*/
+@media only screen and (max-width: 759px){
+    body {
+	background-color: green;
+    }
+
 }
