--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -120,7 +120,7 @@ a:hover {
 /* Mobile version overrides*/
 @media only screen and (max-width: 759px){
 
-    #head, h1 {
+    #head, #head > h1 {
 	padding: 0 0 0 0;
 	width: 100%;
 	font-weight: strong;
@@ -132,7 +132,6 @@ a:hover {
 	height: auto;
 	margin: 20px 0 0 auto;
     }
-
 
     #navbar, #navbar > ul {
 	list-style-type: none;
@@ -153,6 +152,11 @@ a:hover {
 
     #foot {
 	display:none;
+    }
+
+    img {
+	width: 100%;
+	max-width: none !important;
     }
 
 }
