--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -124,8 +124,11 @@ a:hover {
 	padding: 0 0 0 0;
 	width: 100%;
 	font-weight: strong;
-	font-size: 120%;
 	text-align: right;
+    }
+
+    h1 {
+	font-size: 120%;
     }
 
     #head {
@@ -158,5 +161,7 @@ a:hover {
 	width: 100%;
 	max-width: none !important;
     }
+
+
 
 }
