--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,10 +1,13 @@
+$sans-serif-font: Helvetica, sans-serif;
+$serif-font: georgia, serif;
+
 body {
-    background-color: white;
-    font-family: sans-serif;
+  background-color: white;
+  font: $sans-serif-font;
 }
 
 h1, h2, h3 {
-    font-family: georgia;
+  font: $serif-font;
 }
 
 h1 {
@@ -94,8 +97,7 @@ blockquote {
 }
 
 #head, #head > h1 {
-    font-family: sans-serif;
-    font-weight: bold;
+  font-weight: bold;
 }
 
 #main {
@@ -170,47 +172,47 @@ blockquote {
 @media only screen and (max-width: 800px){
 
     #head, #head > h1 {
-	padding: 0 0 0 0;
-	width: 100%;
-	font-weight: bold;
-	font-size: 130%;
-	text-align: right;
-	font-family: sans-serif;
+        padding: 0 0 0 0;
+        width: 100%;
+        font-weight: bold;
+        font-size: 130%;
+        text-align: right;
+        font: $sans-serif-font;
     }
 
     #head {
-	height: auto;
-	margin: 20px 0 0 auto;
+        height: auto;
+        margin: 20px 0 0 auto;
     }
 
     #navbar, #navbar > ul {
-	list-style-type: none;
-	position: relative;
-	float: none;
-	text-align: left;
-	margin: 20px 0 0 auto;
-	padding: 0 0 0 0;
-	display: block;
-	text-align: right;
+        list-style-type: none;
+        position: relative;
+        float: none;
+        text-align: left;
+        margin: 20px 0 0 auto;
+        padding: 0 0 0 0;
+        display: block;
+        text-align: right;
     }
 
     #navbar a:link {
-	font-size: 130%;
+        font-size: 130%;
     }
 
     #main {
-	width: 100%;
-	margin: 20px 1em 0 auto;
-	padding: 0 0 0 0;
+        width: 100%;
+        margin: 20px 1em 0 auto;
+        padding: 0 0 0 0;
     }
 
     #foot {
-	display:none;
+        display:none;
     }
 
     img {
-	width: 100%;
-	max-width: none !important;
+        width: 100%;
+        max-width: none !important;
     }
 
 
