Add portrait to landing page

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -149,8 +149,14 @@ a:hover {
 
 #cv-download-link {
     display:block;
-    text-align:center
+    text-align:center;
 }
+
+.headshot {
+  width: 40%;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  }
 
 .time {
     color: purple;
